[package]
name = "oxidauth"
description = "A service for handling and managing authentication and authorization"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/dewey4iv/oxidauth"
documentation = "https://docs.rs/oxidauth"
repository = "https://github.com/dewey4iv/oxidauth"
authors = ["George Wheeler <georgewheeler.iv@me.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.1"
async-recursion = "1.0.0"
async-trait = "0.1.60"
axum = { version = "0.6.1", features = ["headers", "http1", "json", "matched-path", "original-uri", "tower-log", "query"] }
base64 = "0.20.0"
bcrypt = "0.13.0"
chrono = { version = "0.4.23", features = ["serde"] }
clap = "4.0.29"
dotenv = "0.15.0"
jsonwebtoken = "8.2.0"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
rsa = { version = "0.7.2", features = ["serde"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "chrono", "json", "time", "macros", "migrate", "postgres", "tls", "uuid"]}
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
